[package]
name = "my-gtfs-worker"
version = "0.1.0"
edition = "2024"
authors = ["henius"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8.1", features = ["d1"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
csv = "1.4.0"

[profile.release]
lto = true
opt-level = "s"
