[workspace]
members = ["worker", "importer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["henius"]

[workspace.dependencies]
worker = { version = "0.8.3", features = ["d1"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
wasm-bindgen-futures = "0.4.45"
chrono = { version = "0.4.38", features = ["wasmbind"] }
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
toml = "0.8.19"
zip = { version = "8.2.2", default-features = false, features = ["deflate"] }
csv = "1.3.1"
bytes = "1.5.0"

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
