[package]
name = "importer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
csv.workspace = true
bytes.workspace = true
thiserror.workspace = true

[lints]
workspace = true
