[package]
name = "my-gtfs-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
